1. 교차로 상세화면: 영상탭 > 차량 번호 인식 영역 스크롤 추가 2. 횡단보도 : 시나리오 장비 연동 설정 화면 작업

--- a/base/css/is.css
+++ b/base/css/is.css
@@ -1836,6 +1836,13 @@
 .crossroad-view-container .license-plate-recognition {
   border-bottom: 1px solid #e8e8e8;
 }
+.crossroad-view-container .license-plate-recognition .tbl-custom-radio-wrap {
+  overflow-y: auto;
+  height: 13.6rem;
+}
+.crossroad-view-container .license-plate-recognition .tbl-custom-radio-wrap::-webkit-scrollbar {
+  width: 0.4rem;
+}
 .crossroad-view-container .accidents-container {
   padding-top: 3.8rem !important;
 }
