횡단보도 : 영상인식 위경도 설정 > 설정 화면 작업

--- a/base/css/cw.css
+++ b/base/css/cw.css
@@ -2777,6 +2777,76 @@
   font-size: 1.4rem;
 }
 
+/* 영상인식 위경도 설정 */
+.roi-view-container.latlong .form-bind {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 0 0.4rem;
+}
+.roi-view-container.latlong .form-bind .selectbox-wrap.rounded.xs select {
+  min-width: 8rem;
+  padding: 0.51rem 0;
+  text-align: center;
+  background-size: 0.8rem 0.4rem;
+}
+.roi-view-container.latlong .roi-view-header {
+  padding-top: 4rem;
+}
+.roi-view-container.latlong .ui.tabular.menu.rounded a {
+  font-size: 1.6rem;
+}
+.roi-view-container.latlong .perceive-header {
+  margin-bottom: 2.6rem;
+}
+.roi-view-container.latlong .perceive-body .perceive-header {
+  margin-bottom: 1.4rem;
+}
+.roi-view-container.latlong .roi-set-list-section .data-tbl-gray {
+  height: 39.3rem;
+}
+.roi-view-container.latlong .roi-set-list-section .data-tbl-gray thead th {
+  padding: 0.95rem 0;
+}
+.roi-view-container.latlong .roi-set-list-section .data-tbl-gray tbody td {
+  padding: 0.74rem 0;
+}
+.roi-view-container.latlong .roi-set-list-section .data-tbl-gray tbody td .form-bind {
+  gap: 0 0.2rem;
+}
+.roi-view-container.latlong .roi-set-list-section .data-tbl-gray tbody td .form-bind .selectbox-wrap.rounded.xs select {
+  min-width: 3.4rem;
+  padding: 0.2rem 0.4rem;
+  text-align: left;
+  background-position: calc(100% - 0.4rem) 50%;
+}
+.roi-view-container.latlong .roi-set-list-section .data-tbl-gray tbody td .form-bind .ui.input.rounded.xs {
+  position: static;
+  width: 7.2rem;
+}
+.roi-view-container.latlong .roi-set-list-section .data-tbl-gray tbody td .form-bind .ui.input.rounded.xs input {
+  padding: 0 0.4rem;
+  line-height: 1.8rem;
+}
+.roi-view-container.latlong .roi-set-list-header {
+  margin-bottom: 1.4rem;
+}
+.roi-view-container.latlong .roi-set-list-header .right .btn-md:first-child {
+  width: auto;
+}
+
 /*---------------------------------------------------------------
   [미디어 쿼리]
 -----------------------------------------------------------------*/
