--- a/base/css/is.css
+++ b/base/css/is.css
@@ -35,15 +35,40 @@
 
 /* 교차로 통계 메인 */
 .main-stats-container .filter-grouop {
-  margin-bottom: 4.4rem;
+  margin-bottom: 3.45rem;
 }
 .main-stats-container .summary-info-wrap > .tit {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 0 0.6rem;
+  margin-bottom: 1rem;
+  line-height: normal;
+  font-size: 2.2rem;
+  font-weight: 700;
+  color: #727272;
+}
+.main-stats-container .summary-info-wrap > .tit::before {
+  content: "";
   display: block;
-  margin-bottom: 1.1rem;
-  padding-left: 0.5rem;
-  font-size: 2rem;
-  color: #1e5f8d;
-  font-weight: 500;
+  width: 0.5rem;
+  height: 1.4rem;
+  background-image: url("/base/images/icon_dot_double.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
 }
 .main-stats-container .summary-info-display {
   display: -webkit-box;
@@ -62,48 +87,7 @@
   -ms-flex-line-pack: stretch;
       align-content: stretch;
   gap: 0 1rem;
-  height: 22.9rem;
-}
-.main-stats-container .summary-info-display > .tit {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  gap: 0 0.6rem;
-  width: 15rem;
-  padding: 0 2rem 0 2.6rem;
-  line-height: 100%;
-  font-size: 2rem;
-  color: #fff;
-  font-weight: 600;
-  border-radius: 0.5rem;
-  background: #5285aa;
-  -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.05);
-          box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.05);
-}
-.main-stats-container .summary-info-display > .tit::before {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 5%;
-          flex: 0 0 5%;
-  content: "";
-  display: block;
-  width: 0.5rem;
-  height: 1.4rem;
-  background-image: url("/base/images/icon_dot_double_white.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-size: contain;
+  height: 23.8rem;
 }
 .main-stats-container .summary-info-item-wrap {
   -webkit-box-flex: 1;
@@ -152,7 +136,7 @@
   border-radius: 0.5rem;
   background: #f0fafd;
   font-size: 1.8rem;
-  color: #1e5f8d;
+  color: #003c68;
   font-weight: 600;
   letter-spacing: -0.06rem;
 }
@@ -183,7 +167,7 @@
   font-weight: 700;
 }
 .main-stats-container .summary-info-item-wrap > li .tbl-bind {
-  padding: 1.5rem 1rem 0;
+  padding: 2rem 1rem 0;
 }
 .main-stats-container .summary-info-item-wrap > li .tbl-bind table {
   height: 13.8rem;
@@ -193,42 +177,60 @@
   font-size: 1.6rem;
   color: #727272;
   font-weight: 400;
+  vertical-align: middle;
 }
 .main-stats-container .summary-info-item-wrap > li .tbl-bind table td {
   font-size: 1.6rem;
   color: #727272;
+  vertical-align: middle;
 }
 .main-stats-container .summary-info-item-wrap > li .tbl-bind table td em {
   font-weight: 700;
 }
 .main-stats-container .summary-info-item-wrap > li:nth-child(4) {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 21.5rem;
-          flex: 0 0 21.5rem;
+      -ms-flex: 0 0 22.6rem;
+          flex: 0 0 22.6rem;
 }
 .main-stats-container .summary-info-item-wrap > li:nth-child(4) .tbl-bind table {
-  height: 13rem;
+  height: 14rem;
 }
 .main-stats-container .summary-info-item-wrap > li:nth-child(4) .tbl-bind table td {
   letter-spacing: -0.048rem;
+}
+.main-stats-container .summary-info-item-wrap > li:nth-child(5) {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 18rem;
+          flex: 0 0 18rem;
+}
+.main-stats-container .summary-info-item-wrap > li:nth-child(5) .tbl-bind table {
+  height: 14rem;
+}
+.main-stats-container .summary-info-item-wrap > li:nth-child(6) {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 24.49rem;
+          flex: 0 0 24.49rem;
 }
 .main-stats-container .summary-info-item-wrap > li:last-child {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
-  width: 24.1rem;
+  width: 25.1rem;
 }
 .main-stats-container .summary-info-item-wrap > li:last-child .tbl-bind table {
-  height: 13rem;
+  height: 14rem;
 }
 .main-stats-container .summary-info-item-wrap > li.traffic-direction {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 33.2rem;
-          flex: 0 0 33.2rem;
+      -ms-flex: 0 0 37.8rem;
+          flex: 0 0 37.8rem;
+}
+.main-stats-container .summary-info-item-wrap > li.traffic-direction .tbl-bind table {
+  height: 14rem;
 }
 .main-stats-container .summary-info-item-wrap > li.traffic-direction th span {
   display: block;
-  width: 13.1rem;
+  width: 17rem;
   letter-spacing: -0.068rem;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -238,7 +240,7 @@
 .main-stats-container .summary-info-item-wrap > li.traffic-direction td span {
   display: inline-block;
   width: 3.9rem;
-  margin-right: 1rem;
+  margin: 0 1rem;
   text-align: center;
 }
 .main-stats-container .summary-info-chart {
@@ -271,11 +273,12 @@
           box-sizing: border-box;
 }
 .main-stats-container .summary-info-chart .road-sort {
-  margin: 4.7rem 0.9rem 0 0;
+  width: 11.4rem;
+  margin-top: 4.7rem;
 }
 .main-stats-container .summary-info-chart .road-sort button {
   display: block;
-  width: 10.5rem;
+  width: 100%;
   padding: 0;
   line-height: 2.3rem;
   font-size: 1.4rem;
@@ -376,7 +379,7 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  margin-bottom: 4.1rem;
+  margin-bottom: 3.65rem;
 }
 .stats-container .filter-grouop .btn-data-search:nth-last-child(2) {
   min-width: 13.1rem;
@@ -401,8 +404,8 @@
   background: #fff;
 }
 .stats-container .divide-none .chart-container {
-  height: 24.6rem;
-  padding: 2rem 1rem;
+  height: 26.29rem;
+  padding: 2.5rem 3rem;
 }
 .stats-container .divide-2 {
   overflow-y: auto;
@@ -485,17 +488,30 @@
 }
 .stats-container .divide-4 {
   overflow-y: auto;
+  width: calc(100% + 0.4rem);
   height: 44rem;
   margin-top: 2.1rem;
 }
+.stats-container .divide-4::-webkit-scrollbar {
+  width: 0.4rem;
+}
 .stats-container .divide-4.title-none {
-  overflow-y: visible;
+  width: 100%;
   height: auto;
   margin-top: 1rem;
 }
 .stats-container .divide-4.title-none > ul {
   overflow-y: auto;
   height: 40.8rem;
+}
+.stats-container .divide-4.title-none > ul::-webkit-scrollbar {
+  width: 0.4rem;
+}
+.stats-container .divide-4.title-none > ul .chart-wrap {
+  width: 49.7%;
+  height: 21.5rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .stats-container .divide-4 li {
   display: -webkit-box;
@@ -518,9 +534,8 @@
   gap: 1rem;
 }
 .stats-container .divide-4 li .chart-wrap {
-  width: 86.3rem;
   height: 19.6rem;
-  padding: 1.4rem 3rem;
+  padding: 1.4rem 2.5rem;
   border-radius: 0.5rem;
   background: #fff;
   -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.05);
@@ -564,9 +579,6 @@
 }
 .stats-container .divide-4 li .chart-wrap:nth-child(4) h3::before {
   background: #c2c2c2;
-}
-.stats-container .divide-4 li .chart-wrap .chart-container {
-  height: 13.7rem;
 }
 .stats-container .divide-4 li + li {
   margin-top: 1rem;
@@ -621,7 +633,7 @@
 
 /* 교차로 유출입 교통량 */
 .crossroads-flow-container .filter-grouop {
-  margin-bottom: 3.2rem;
+  margin-bottom: 4.25rem;
 }
 .crossroads-flow-container .filter-grouop .ui.primary-chkbox label {
   line-height: 2.1rem;
@@ -1021,6 +1033,12 @@
   color: #fff;
   font-weight: 600;
 }
+.crossroads-flow-traffic .flow-traffic-data li em:first-child {
+  width: 20.5rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
 .crossroads-flow-traffic .flow-traffic-data li span {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -1030,6 +1048,53 @@
   font-size: 1.6rem;
   color: #727272;
   font-weight: 500;
+}
+.crossroads-flow-traffic .flow-traffic-data li span:first-child {
+  width: 20.5rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
+
+/* 공통 영역을 특정 화면에서만 수정이 되어서 style 재정의...
+  - 교차로 통계
+  - 교차로 상세 통계
+  - 교차로 비교 통계
+  - 교차로 원시 이력
+  - 교차로 유출입 교통량
+*/
+.main-stats-container,
+.stats-container,
+.crossroads-flow-container {
+  margin-top: -1.95rem;
+}
+.main-stats-container .filter-grouop > .inner,
+.stats-container .filter-grouop > .inner,
+.crossroads-flow-container .filter-grouop > .inner {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
+.main-stats-container .filter-grouop .selectbox-wrap.primary.label-none select,
+.stats-container .filter-grouop .selectbox-wrap.primary.label-none select,
+.crossroads-flow-container .filter-grouop .selectbox-wrap.primary.label-none select {
+  height: 3rem;
+  font-size: 1.6rem;
+}
+.main-stats-container .filter-grouop .date-group input,
+.stats-container .filter-grouop .date-group input,
+.crossroads-flow-container .filter-grouop .date-group input {
+  height: 3rem;
+}
+.main-stats-container .filter-grouop .ui.primary-chkbox.md label,
+.stats-container .filter-grouop .ui.primary-chkbox.md label,
+.crossroads-flow-container .filter-grouop .ui.primary-chkbox.md label {
+  font-size: 1.6rem;
+}
+.main-stats-container .filter-grouop .btn-data-search,
+.stats-container .filter-grouop .btn-data-search,
+.crossroads-flow-container .filter-grouop .btn-data-search {
+  line-height: 2.6rem;
 }
 
 /* 실시간 돌발 조회 */
