1. 교차로 > 상세 통계, 비교 통계화면 css 수정 2. 교차로 비교 통계 화면 차트영역 css 수정 3. 지점 맵 설정(지점 아이콘) 및 카메라 맵 설정(카메라, 레이더, 신호등,    LOS) 드래그 말풍선 가이드 추가

--- a/base/css/is.css
+++ b/base/css/is.css
@@ -502,7 +502,7 @@
 }
 .stats-container .divide-4.title-none > ul {
   overflow-y: auto;
-  height: 40.8rem;
+  height: 44.5rem;
 }
 .stats-container .divide-4.title-none > ul::-webkit-scrollbar {
   width: 0.4rem;
@@ -534,6 +534,7 @@
   gap: 1rem;
 }
 .stats-container .divide-4 li .chart-wrap {
+  width: 86.8rem;
   height: 19.6rem;
   padding: 1.4rem 2.5rem;
   border-radius: 0.5rem;
@@ -579,6 +580,9 @@
 }
 .stats-container .divide-4 li .chart-wrap:nth-child(4) h3::before {
   background: #c2c2c2;
+}
+.stats-container .divide-4 li .chart-wrap .chart-container {
+  height: 13.7rem;
 }
 .stats-container .divide-4 li + li {
   margin-top: 1rem;
