--- a/base/css/style.css
+++ b/base/css/style.css
@@ -2890,6 +2890,11 @@ body ::-webkit-scrollbar-track {
 .los-display .ico-cr.moving {
   cursor: move;
 }
+.los-display .ico-cr.moving .speech-bubble-guide6 {
+  left: -5rem;
+  top: -5.5rem;
+  display: block;
+}
 .los-display .traffic-display {
   position: absolute;
   z-index: 2;
@@ -5385,11 +5390,55 @@ body ::-webkit-scrollbar-track {
 }
 .ly-map .speech-bubble-guide6 {
   display: none;
-  position: fixed;
+  position: absolute;
   z-index: 2;
   width: 14.7rem;
   height: 5rem;
   background-image: url("/base/images/speech_bubble6.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+.ly-map .speech-bubble-guide7 {
+  display: none;
+  position: absolute;
+  z-index: 2;
+  width: 16.1rem;
+  height: 5.1rem;
+  background-image: url("/base/images/speech_bubble7.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+.ly-map .speech-bubble-guide8 {
+  display: none;
+  position: absolute;
+  z-index: 2;
+  width: 16.1rem;
+  height: 5.1rem;
+  background-image: url("/base/images/speech_bubble8.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+.ly-map .speech-bubble-guide9 {
+  display: none;
+  position: absolute;
+  z-index: 2;
+  width: 16.1rem;
+  height: 5.1rem;
+  background-image: url("/base/images/speech_bubble9.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+.ly-map .speech-bubble-guide10 {
+  display: none;
+  position: absolute;
+  z-index: 2;
+  width: 15.2rem;
+  height: 5.1rem;
+  background-image: url("/base/images/speech_bubble10.png");
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: cover;
@@ -5555,6 +5604,25 @@ body ::-webkit-scrollbar-track {
 .ly-map.map-setting .ico-vehicle-signal.moving,
 .ly-map.map-setting .ico-map-above-los.moving {
   cursor: move;
+}
+.ly-map.map-setting .ico-map-above-camera.moving [class*=speech-bubble-guide],
+.ly-map.map-setting .ico-map-above-radar.moving [class*=speech-bubble-guide],
+.ly-map.map-setting .ico-vehicle-signal.moving [class*=speech-bubble-guide],
+.ly-map.map-setting .ico-map-above-los.moving [class*=speech-bubble-guide] {
+  top: -5.5rem;
+  display: block;
+}
+.ly-map.map-setting .ico-map-above-camera.moving .speech-bubble-guide7 {
+  left: -6.4rem;
+}
+.ly-map.map-setting .ico-map-above-radar.moving .speech-bubble-guide8 {
+  left: -6.6rem;
+}
+.ly-map.map-setting .ico-vehicle-signal.moving .speech-bubble-guide9 {
+  left: -4rem;
+}
+.ly-map.map-setting .ico-map-above-los.moving .speech-bubble-guide10 {
+  left: -5.2rem;
 }
 .ly-map [class*=ico-los] {
   position: absolute;
